// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GeolocationControl /> <GeolocationControl /> as button renders correctly 1`] = `
<WithStyles(ForwardRef(FormControl))
  className=""
  id="settingsGeolocationControl"
>
  <WithStyles(ForwardRef(Button))
    color="primary"
    onClick={[Function]}
    variant="contained"
  >
    Enable Geolocation
  </WithStyles(ForwardRef(Button))>
</WithStyles(ForwardRef(FormControl))>
`;

exports[`<GeolocationControl /> <GeolocationControl /> as button renders correctly 2`] = `
<WithStyles(ForwardRef(FormControl))
  className=""
  id="settingsGeolocationControl"
>
  <WithStyles(ForwardRef(Button))
    color="primary"
    onClick={[Function]}
    variant="contained"
  >
    Enable Geolocation
  </WithStyles(ForwardRef(Button))>
</WithStyles(ForwardRef(FormControl))>
`;

exports[`<GeolocationControl /> <GeolocationControl /> as switch renders correctly 1`] = `
<WithStyles(ForwardRef(FormControl))
  className=""
  id="settingsGeolocationControl"
>
  <WithStyles(ForwardRef(FormControlLabel))
    control={
      <WithStyles(ForwardRef(Switch))
        checked={false}
        color="primary"
        onChange={[Function]}
        value={false}
      />
    }
    label="Geolocation Enabled"
  />
</WithStyles(ForwardRef(FormControl))>
`;

exports[`<GeolocationControl /> <GeolocationControl /> as switch renders correctly 2`] = `
<WithStyles(ForwardRef(FormControl))
  className=""
  id="settingsGeolocationControl"
>
  <WithStyles(ForwardRef(FormControlLabel))
    control={
      <WithStyles(ForwardRef(Switch))
        checked={true}
        color="primary"
        onChange={[Function]}
        value={true}
      />
    }
    label="Geolocation Enabled"
  />
</WithStyles(ForwardRef(FormControl))>
`;
